--- a/wwwroot/css/AdminDashboard.css
+++ b/wwwroot/css/AdminDashboard.css
@@ -1,4 +1,6 @@
-﻿.dashboard {
+﻿/* //   AAAND here we go */ AAAND here we go
+
+.dashboard {
     display: flex;
     flex-direction: column;
     align-items: center;
