--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<Apptivate_UQMS_WebApp.Models.Users>
+﻿    <!-- AAAND here we go -->
+
+@model IEnumerable<Apptivate_UQMS_WebApp.Models.Users>
 
 @{
     ViewData["Title"] = "Index";
