--- a/wwwroot/css/UserManagement.css
+++ b/wwwroot/css/UserManagement.css
@@ -1,4 +1,6 @@
-﻿body {
+﻿/*  //   AAAND here we go */ 
+
+body {
     line-height: 1.6; /* Adjust the line height as needed */
     font-family: Arial, sans-serif; /* Optional: Set a default font family */
     font-size: 16px; /* Optional: Set a default font size */
