--- a/Views/Dashboard/StaffDashboard.cshtml
+++ b/Views/Dashboard/StaffDashboard.cshtml
@@ -19,7 +19,7 @@
                 <img src="~/Images/profile-pic.png" alt="Profile Picture" class="profile-pic">
                 <div>
                     <h2>@Model.Users.Name @Model.Users.Surname</h2>
-                    <p>@Model.StaffDetails.Position?.PositionName ?? "Position Unassigned"</p>
+                    <p>@Model.StaffDetails.Position"</p>
                 </div>
             </div>
             <div class="notification-icon">
