--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -78,6 +78,22 @@
                     </a>
                 </li>
 
+
+                @if (User.IsInRole("Admin"))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="UserManagement">
+                            <img src="~/Images/Users.png" alt="Users Icon" class="icon" /><span>Users</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Analytics" asp-action="AnalyticsReporting">
+                            <img src="~/Images/pie-chart.png" alt="Analytics Icon" class="icon" /><span>Analytics</span>
+                        </a>
+                    </li>
+                }
+            
+
                 <!-- Dummy Table visible only to Admin -->
                 @if (User.IsInRole("Admin"))
                 {
